--- a/MapEditor/DefaultPropStr.ini
+++ b/MapEditor/DefaultPropStr.ini
@@ -29,3 +29,6 @@ CounterFilePath = .\\save\\event
 BackupFilePath = .\\save\\backup
 
 PakFolder = .\\pak
+
+MapImageFolder = .\\res\\Image\\GameImage
+MapImageIniFile = .\\res\\Image\\GameImage\\image.ini
